--- a/src/lib/installation/default_installation_configs/templates/admin/admin_footer_assets.twig
+++ b/src/lib/installation/default_installation_configs/templates/admin/admin_footer_assets.twig
@@ -40,6 +40,8 @@
     {{ assets.getAssetsFile('menu.js')|raw }}
 </script>
 
+<script src="/core/assets/default/password.js"></script>
+
 {{ attached_library('head')|raw }}
 
 {{ attached_library('footer')|raw }}
