--- a/src/lib/installation/default_installation_configs/templates/misc/filter.form.twig
+++ b/src/lib/installation/default_installation_configs/templates/misc/filter.form.twig
@@ -53,6 +53,8 @@
             </div>
         {% endif %}
 
+        <input type="hidden" name="storage" value="{{ filters.storage }}">
+
         <!-- Button -->
         <div class="column column-10">
             <input class="button button-primary" type="submit" value="{{ 'Apply Filters'|t }}">
