--- a/src/lib/installation/default_installation_configs/templates/admin/admin_head_assets.twig
+++ b/src/lib/installation/default_installation_configs/templates/admin/admin_head_assets.twig
@@ -31,3 +31,4 @@
 <script>
     {{ assets.getAssetsFile('add-option.js')|raw }}
 </script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
