--- a/src/lib/installation/default_installation_configs/templates/user/view.login.form.twig
+++ b/src/lib/installation/default_installation_configs/templates/user/view.login.form.twig
@@ -3,53 +3,11 @@
 {% block body %}
 
     <div class="login-header">{{ t("Login to Your Account") }}</div>
-
-    <form method="POST" enctype="multipart/form-data">
-        <fieldset>
-
-            {% if auth.isNormalAuthActive %}
-
-                <!-- Username or Email Field -->
-                <div class="row">
-                    <div class="column">
-                        <label for="name">Email or name</label>
-                        <input id="name" name="name" type="text" placeholder="Username or Email">
-                        {% if name.getError() %}
-                            <span class="field-message message-name">{{ name.getError() }}</span>
-                        {% endif %}
-                    </div>
-                </div>
-
-                {% if not auth.isNormalDefaultPasswordLessType %}
-                    <!-- Password Field -->
-                    <div class="row">
-                        <div class="column">
-                            <label for="password">Password</label>
-                            <input name="password" type="password" id="password" placeholder="Password">
-                            {% if password.getError() %}
-                                <span class="field-message message-password">{{ password.getError() }}</span>
-                            {% endif %}
-                        </div>
-                    </div>
-                {% endif %}
-
-                <!-- Submit Button -->
-                <div class="row">
-                    <div class="column">
-                        <input class="button-primary" type="submit" value="Login">
-                    </div>
-                </div>
-
-            {% endif %}
-
-        </fieldset>
-    </form>
-
-
+    {{ __form_base|raw }}
     <!-- Forgot Password Link -->
     <a href="/user/forgot-password" class="forgot-password">Forgot your password?</a>
 
-    <div class="mt-lg-5">
+    <div class="mt-lg-5" style="margin-top: 50px;gap: 30px;display: flex;align-items: flex-start;direction: ltr;">
         {% if auth.isGoogleAuthActive %}
             <!-- Google Login Button -->
             <a href="{{ google_link }}" type="button" class="btn btn-social btn-google">
