--- a/src/lib/installation/default_installation_configs/templates/admin/admin_head_assets.twig
+++ b/src/lib/installation/default_installation_configs/templates/admin/admin_head_assets.twig
@@ -18,6 +18,10 @@
     {{ assets.getAssetsFile('admin.css')|raw }}
 </style>
 
+<style>
+    {{ assets.getAssetsFile('menus.css')|raw }}
+</style>
+
 <script>
     {{ assets.getAssetsFile('modal.js')|raw }}
 </script>
