--- a/src/lib/installation/default_installation_configs/templates/admin/admin_navigation.twig
+++ b/src/lib/installation/default_installation_configs/templates/admin/admin_navigation.twig
@@ -25,47 +25,7 @@
     </div>
 {% endif %}
 
-{% if request.user is not null and request.user.isIsAdmin %}
-    <!-- Main Navigation Menu -->
-    <div class="main-menu">
-        <a href="/admin/content"><i class="fa fa-file"></i> {{ "Content"|t }} </a>
-        <a href="/admin/structure"><i class="fa fa-sitemap"></i> {{ "Structure"|t }}</a>
-        {# <a href="#"><i class="fa fa-paint-brush"></i> {{ "Appearance"|t }}</a> #}
-        <a href="/admin/extends"><i class="fa fa-wrench"></i> {{ "Extend"|t }}</a>
-        <a href="/admin/config"><i class="fa fa-cogs"></i> {{ "Configuration"|t }}</a>
-        <a href="/admin/people"><i class="fa fa-users"></i> {{ "People"|t }}</a>
-        <a href="/admin/reports"><i class="fa fa-chart-bar"></i> {{ "Reports"|t }}</a>
-        <a href="/user/logout"><i class="fa fa-sign-out"></i> {{ "Logout"|t }}</a>
-    </div>
-{% elseif request.user is not null and request.user.isIsManager %}
-
-    <div class="main-menu">
-        <a href="/admin/content"><i class="fa fa-file"></i> {{ "Content"|t }}</a>
-        <a href="/admin/people"><i class="fa fa-users"></i> {{ "People"|t }}</a>
-        <a href="/user/logout"><i class="fa fa-sign-out"></i> {{ "Logout"|t }}</a>
-    </div>
-
-{% elseif request.user is not null and request.user.isIsAuthenticated %}
-
-    <div class="main-menu">
-        <a href="#"><i class="fa fa-home"></i> {{ "Home"|t }}</a>
-        <a href="/admin/people"><i class="fa fa-info"></i> {{ "About"|t }}</a>
-        <a href="#"><i class="fa fa-contact-card"></i> {{ "Contact"|t }}</a>
-        <a href="/user/logout"><i class="fa fa-sign-out"></i> {{ "Logout"|t }}</a>
-    </div>
-
-{% elseif request.user is not null and request.user.isIsContentCreator %}
-    <div class="main-menu">
-        <a href="/admin/content"><i class="fa fa-file"></i> {{ "Content"|t }}</a>
-        <a href="/admin/people"><i class="fa fa-users"></i> {{ "People"|t }}</a>
-        <a href="/user/logout"><i class="fa fa-sign-out"></i> {{ "Logout"|t }}</a>
-    </div>
-{% else %}
-
-    <div class="main-menu justify-content-end">
-        <a href="/user/register"><i class="fa fa-user"></i> {{ "Register"|t }}</a>
-        <a href="/user/login"><i class="fa fa-sign-in"></i> {{ "Login"|t }}</a>
-    </div>
-
-{% endif %}
+<div class="main-menu">
+    {{ theme.menus|raw }}
+</div>
 
