--- a/src/extends/form_builder/templates/dashboard/form_builder.dashboard.twig
+++ b/src/extends/form_builder/templates/dashboard/form_builder.dashboard.twig
@@ -65,6 +65,92 @@
                         <i class="fas fa-link"></i>
                         <span>Reference</span>
                     </div>
+
+                    <div class="field-type" draggable="true" data-type="email">
+                        <i class="fas fa-envelope"></i>
+                        <span>Email</span>
+                    </div>
+
+                    <div class="field-type" draggable="true" data-type="password">
+                        <i class="fas fa-lock"></i>
+                        <span>Password</span>
+                    </div>
+
+                    <div class="field-type" draggable="true" data-type="number">
+                        <i class="fas fa-hashtag"></i>
+                        <span>Number</span>
+                    </div>
+
+                    <div class="field-type" draggable="true" data-type="tel">
+                        <i class="fas fa-phone"></i>
+                        <span>Tel Number</span>
+                    </div>
+
+                    <div class="field-type" draggable="true" data-type="url">
+                        <i class="fas fa-link"></i>
+                        <span>URL</span>
+                    </div>
+
+                    <div class="field-type" draggable="true" data-type="search">
+                        <i class="fas fa-search"></i>
+                        <span>Search</span>
+                    </div>
+
+                    <div class="field-type" draggable="true" data-type="datetime-local">
+                        <i class="fas fa-clock"></i>
+                        <span>Date & Time</span>
+                    </div>
+
+                    <div class="field-type" draggable="true" data-type="time">
+                        <i class="fas fa-stopwatch"></i>
+                        <span>Time</span>
+                    </div>
+
+                    <div class="field-type" draggable="true" data-type="month">
+                        <i class="fas fa-calendar-alt"></i>
+                        <span>Month</span>
+                    </div>
+
+                    <div class="field-type" draggable="true" data-type="week">
+                        <i class="fas fa-calendar-week"></i>
+                        <span>Week</span>
+                    </div>
+
+                    <div class="field-type" draggable="true" data-type="color">
+                        <i class="fas fa-palette"></i>
+                        <span>Color</span>
+                    </div>
+
+                    <div class="field-type" draggable="true" data-type="radio">
+                        <i class="fas fa-dot-circle"></i>
+                        <span>Radio Button</span>
+                    </div>
+
+                    <div class="field-type" draggable="true" data-type="range">
+                        <i class="fas fa-sliders-h"></i>
+                        <span>Range</span>
+                    </div>
+
+                    <div class="field-type" draggable="true" data-type="hidden">
+                        <i class="fas fa-eye-slash"></i>
+                        <span>Hidden</span>
+                    </div>
+
+                    <div class="field-type" draggable="true" data-type="button">
+                        <i class="fas fa-square"></i>
+                        <span>Button</span>
+                    </div>
+
+                    <div class="field-type" draggable="true" data-type="submit">
+                        <i class="fas fa-paper-plane"></i>
+                        <span>Submit</span>
+                    </div>
+
+                    <div class="field-type" draggable="true" data-type="reset">
+                        <i class="fas fa-undo"></i>
+                        <span>Reset</span>
+                    </div>
+
                 </div>
             </aside>
 
