--- a/src/modules/assets_manager/assets/default/admin.css
+++ b/src/modules/assets_manager/assets/default/admin.css
@@ -766,3 +766,53 @@ fieldset input[type="radio"] {
     aspect-ratio: 2 / 1;
     border: none;
 }
+.reference-field-wrapper {
+
+        max-width: 50%;
+        padding: 8px;
+        position: relative;
+        margin-top: 3rem;
+        margin-bottom: 3rem;
+
+    .selected-items {
+        display: flex;
+        flex-wrap: wrap;
+        margin-bottom: 5px;
+    }
+    .suggest-input {
+        width: 100%;
+        padding: 5px;
+    }
+    .suggestions {
+        border: 1px solid #ccc;
+        max-height: 120px;
+        overflow-y: auto;
+        display: none;
+        position: absolute;
+        background: #fff;
+        width: calc(100% - 18px);
+        z-index: 10;
+    }
+    .suggestion-item {
+        padding: 5px;
+        cursor: pointer;
+    }
+    .suggestion-item:hover {
+        background: #eee;
+    }
+    .tag {
+        background: #007bff;
+        color: white;
+        padding: 3px 8px;
+        margin: 2px;
+        border-radius: 12px;
+        font-size: 14px;
+        display: flex;
+        align-items: center;
+    }
+    .tag span {
+        margin-left: 5px;
+        cursor: pointer;
+        font-weight: bold;
+    }
+}
