--- a/src/lib/installation/default_installation_configs/templates/admin/admin_base.twig
+++ b/src/lib/installation/default_installation_configs/templates/admin/admin_base.twig
@@ -38,7 +38,7 @@
     {% block body %}{% endblock %}
 </div>
 
-{% block bottom %}{% endif %}
+{% block bottom %}{% endblock %}
 
 {% if request.user.isIsAdmin or request.user.isIsManager or request.user.isIsContentCreator %}
 
