--- a/src/lib/installation/default_installation_configs/templates/admin/admin_base.twig
+++ b/src/lib/installation/default_installation_configs/templates/admin/admin_base.twig
@@ -22,7 +22,7 @@
 
     {% block head %}{% endblock %}
 </head>
-<body>
+<body {% block body_attributes %}{% endblock %}>
 
 {% if request.user.isIsAdmin or request.user.isIsManager or request.user.isIsContentCreator %}
 
